reduced the cyclomatic complexity and fixed the double scrollbar issue

--- a/packages/core/src/components/Panel/Panel.scss
+++ b/packages/core/src/components/Panel/Panel.scss
@@ -19,6 +19,7 @@
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
+    position: relative;
   }
 
   &--horizontal {
